Добавил активность кнопок MC и MR

--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -26,8 +26,8 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <TextBox x:Name="textBox" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Text="" TextAlignment="Right" FontSize="40"></TextBox>
-        <Button Content="MC" Grid.Row="1" Grid.Column="0" FontSize="20"></Button>
-        <Button Content="MR" Grid.Row="1" Grid.Column="1" FontSize="20"></Button>
+        <Button Content="MC" Grid.Row="1" Grid.Column="0" FontSize="20" x:Name="buttonMC"></Button>
+        <Button Content="MR" Grid.Row="1" Grid.Column="1" FontSize="20" x:Name="buttonMR"></Button>
         <Button Content="M+" Grid.Row="1" Grid.Column="2" FontSize="20"></Button>
         <Button Content="M-" Grid.Row="1" Grid.Column="3" FontSize="20"></Button>
         <Button Content="%" Grid.Row="2" Grid.Column="0" FontSize="20"></Button>
