--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
         mc:Ignorable="d"
-        Title="Calculator" Height="560" Width="600" KeyDown="Buttons_KeyDown">
+        Title="Calculator" Height="560" Width="600" KeyDown="Buttons_KeyDown" PreviewKeyDown="Window_PreviewKeyDown">
     <Grid x:Name="mainGrid" Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
